objects/Dynaform__c.object
<CustomObject>
    <fields>
        <fullName>Eloqua_Form_Name__c</fullName>
        <label>Eloqua Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Landing_Page_Name__c</fullName>
        <label>Eloqua Landing Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_URL__c</fullName>
        <label>Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualification</label>
        <referenceTo>Qualification__c</referenceTo>
        <relationshipLabel>Dynaforms</relationshipLabel>
        <relationshipName>Dynaforms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shows whether the Form has been properly configured for Dynaform functionality</inlineHelpText>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Dynaform</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Qualification__c</columns>
        <columns>Form_URL__c</columns>
        <columns>Verified__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Dynaform Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynaforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>